# PCC-VizForge

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  setup_pcc_vizforge.sh
config/: dice.yaml  github.yaml  quakes.yaml  random_walk.yaml  weather.yaml
notebooks/: 01_random_walk.ipynb  02_dice.ipynb  03_weather.ipynb  04_quakes.ipynb  05_github.ipynb
src/: __init__.py  cli.py
src/generators/: __init__.py  dice.py  github.py  quakes.py  random_walk.py  weather.py
src/plots/: __init__.py  dice_mpl.py  dice_plotly.py  github_mpl.py  github_plotly.py  quakes_mpl.py  quakes_plotly.py  random_walk_mpl.py  random_walk_plotly.py  weather_mpl.py  weather_plotly.py
src/utils/: __init__.py  io.py  theming.py
tests/: __init__.py  test_generators.py  test_plots.py
